# fast_openfoam_reader

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  boundary_test_file  clean.sh  example.py  faces_test_file  measure_time.py  points_test_file  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ci.yml
docs/: README.md
src/fast_openfoam_reader/: __init__.py  fastmath.pyx
src/fastofreader/: __init__.py  __init__.pyi  boundary.py  core.pyx
src/fastops/: __init__.py  core.c  core.pyx
src/fastops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_boundary.py  test_core.py  test_fastmath.py  test_points.py
