[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "Cython>=3.0",
  "oldest-supported-numpy", 
]
build-backend = "setuptools.build_meta"

[project]
name = "fastops"
version = "0.1.0"
description = "Fast numerical operations implemented in Cython"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["cython", "numerics", "performance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Cython",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
Homepage = "https://example.com/fastops"
Issues = "https://example.com/fastops/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fastops = ["*.pyx", "*.pxd"]
