[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "Cython>=3.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "fastofreader"
version = "0.1.0"
description = "Fast numerical operations implemented in Cython"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Tomas Vicar", email = "tomasvicar@gmail.com" }]
keywords = ["cython", "numerics", "performance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Cython",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
Homepage = "https://example.com/fastops"
Issues = "https://example.com/fastops/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fastofreader = ["*.pyx", "*.pxd"]
